# benchmark_phi

./: CMakeLists.txt  README.md
include/: gemm.h
opencl/: gemm.cl
src/: gemm.cpp  icc.cpp  main.cpp  opencl.cpp
